Bug 610769: Align the Firefox menu with the Firefox button, r=dao, a=gavin
UltraBlame original commit: e6809237f52ca3179857c90d213a19df46a897e9

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -395,6 +395,28 @@ rgba
 )
 ;
 }
+#
+appmenu
+-
+popup
+{
+margin
+-
+top
+:
+-
+1px
+;
+-
+moz
+-
+margin
+-
+start
+:
+1px
+;
+}
 /
 *
 Bug
